--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: https://github.com/iMishaDev
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/imishadev/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: https://twitter.com/imishadev
